--- a/Danny/crypto_LSTM2.ipynb
+++ b/Danny/crypto_LSTM2.ipynb
@@ -1656,6 +1656,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualise the ask_price predictions\n",
+    "plt.figure(figsize = (18,9))\n",
+    "plt.plot(y_test['ask_price'], color = 'red', label = 'y_test')\n",
+    "plt.plot(y_hat[:,0], color = 'blue', label = 'y_hat')\n",
+    "plt.title('y_hat[\"ask_price\"] vs y_test[\"ask_price\"]')\n",
+    "plt.ylabel('ask_price')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# Visualise the bid_price predictions\n",
+    "plt.figure(figsize = (18,9))\n",
+    "plt.plot(y_test['bid_price'], color = 'red', label = 'y_test')\n",
+    "plt.plot(y_hat[:,3], color = 'blue', label = 'y_hat')\n",
+    "plt.title('y_hat[\"bid_price\"] vs y_test[\"bid_price\"]')\n",
+    "plt.ylabel('bid_price')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
