--- a/Danny/crypto_LSTM2.ipynb
+++ b/Danny/crypto_LSTM2.ipynb
@@ -1966,7 +1966,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
